<resources>
    <string name="app_name">Auto_Care</string>
    <string name="Customer_Name">Customer Name</string>
    <string name="Customer_user_name">Customer User Name</string>
    <string name="Customer_Email_Address">Customer Email Address</string>
    <string name="Customer_contact">Customer Contact</string>
    <string name="Cutomer_Add_Button">Add</string>
    <string name="cus_Delete_button">Delete</string>
    <string name="Customer_Update_button">Update</string>
    <string name="Customer_History_Button">History</string>
    <string name="Booking_id">Booking id</string>
    <string name="booking_date">Booking_date</string>
    <string name="Customer_Contact">Customer Contact</string>
    <string name="bookimg_confirm">Confirm</string>
    <string name="Booking_delete">Delete</string>
    <string name="Meter_Reading">Meter Reading</string>

    <string name="Order_Date">Order Date</string>
    <string name="OOrder_ID">Order ID</string>
    <string name="Customer_password">Password</string>
    <string name="Customer_Repass">Re-enter the password</string>
    <string name="Customer_Show">Show all</string>
</resources>