<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".Booking_View_Page">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="213dp"
        android:layout_height="147dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/booking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/Order_id"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/customer_input"
        android:ems="10"
        android:hint="@string/Booking_id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/booking_date"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/customer_input"
        android:ems="10"
        android:hint="@string/booking_date"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Order_id"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/booking_cus_Name"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/customer_input"
        android:ems="10"
        android:hint="@string/Customer_Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_date"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/booking_cus_contact"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/customer_input"
        android:ems="10"
        android:hint="@string/Customer_Contact"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"

        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_cus_Name"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/booking_cus_Email"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/customer_input"
        android:ems="10"
        android:hint="@string/Customer_Email_Address"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#919191"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_cus_contact"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/booking_cus_meterReading"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:background="@drawable/customer_input"
        android:ems="10"
        android:hint="@string/Meter_Reading"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#919191"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_cus_Email"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/booking_delete_btn"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:backgroundTint="@color/Delete"
        android:text="@string/Booking_delete"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_cus_meterReading"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/booking_confirm_btn"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/Confitm"
        android:text="@string/bookimg_confirm"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toEndOf="@+id/booking_delete_btn"
        app:layout_constraintTop_toBottomOf="@+id/booking_cus_meterReading"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>