<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:layout_marginBottom="2px"
    >

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8px"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:padding="8dp"
            android:text="@string/Customer_Name"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="37dp"
            android:text="@string/Customer_user_name"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="37dp"
            android:text="Email Address"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:padding="8dp"
            android:text="@string/Customer_Contact"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8px"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cusname"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cusuname"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="TextView"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/cusemail"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/cuscontact"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>